# OVC-VVP-Verifier

./: .gitignore  .gitmodules  .mcp.json  CHANGES.md  CLAUDE.md  E2E_TEST.md  PLAN.md  PLAN_CESR.md  PLAN_Sprint53.md  PLAN_Sprint54.md  PLAN_Sprint55.md  PLAN_Sprint63.md  README.md  REVIEW.md  SPRINTS.md  SYSTEM_OVERVIEW.md  docker-compose.yml  fic.json  pyproject.toml  pytest.ini
app/: main.py  (+1 more)
services/issuer/: CLAUDE.md  Dockerfile  pyproject.toml  pytest.ini
services/issuer/app/: __init__.py  config.py  main.py
services/issuer/app/api/: __init__.py  admin.py  auth.py  credential.py  dossier.py  health.py  identity.py  models.py  org_api_key.py  organization.py  registry.py  schema.py  session.py  tn.py  user.py  vetter_certification.py  vvp.py
services/issuer/app/audit/: __init__.py  logger.py
services/issuer/app/auth/: __init__.py  api_key.py  db_users.py  org_roles.py  roles.py  schema_auth.py  scoping.py  session.py
services/issuer/app/db/: __init__.py  models.py  session.py
services/issuer/app/dossier/: builder.py
services/issuer/app/keri/: __init__.py  identity.py  issuer.py  persistence.py  registry.py  witness.py
services/issuer/app/org/: __init__.py  lei_generator.py  mock_vlei.py
services/issuer/app/schema/: __init__.py  importer.py  store.py
services/issuer/config/: .gitkeep  api_keys.json  witnesses-azure.json  witnesses.json
services/issuer/scripts/: generate-api-key.py  restart-server.sh  run-tests.sh
services/issuer/tests/: __init__.py  conftest.py  test_auth.py  test_credential.py  test_credential_edge_integration.py  test_dossier.py  test_dossier_readiness.py  test_health.py  test_identity.py  test_identity_header.py  test_import.py  test_org_switching.py  test_org_type.py  test_registry.py  test_said.py  test_schema.py  test_schema_auth.py  test_schema_edge_parsing.py  test_sprint41_multitenancy.py  test_sprint63_wizard.py  test_tn_mapping.py  test_vetter_certification.py  test_vetter_constraints.py  test_vvp_header.py  test_vvp_passport.py  test_walkthrough.py
services/issuer/web/: 404.html  admin.html  benchmarks.html  create.html  credentials.html  dashboard.html  dossier.html  help.html  index.html  login.html  organization-detail.html  organizations.html  profile.html  registry.html  schemas.html  shared.js  tn-mappings.html  users.html  vetter.html  vvp.html  walkthrough.html
services/sip-redirect/: Dockerfile  README.md  pyproject.toml
services/sip-redirect/app/: __init__.py  audit.py  config.py  main.py  status.py
services/sip-redirect/tests/: __init__.py  test_auth.py  test_builder.py  test_fixtures.py  test_monitor_auth.py  test_monitor_buffer.py  test_monitor_ingest.py  test_monitor_oauth.py  test_monitor_websocket.py  test_parser.py
services/sip-verify/: pyproject.toml
services/sip-verify/app/: config.py
services/sip-verify/deploy/: vvp-sip-verify.service
services/sip-verify/tests/: test_handler.py  test_handler_events.py  test_identity_parser.py  test_vetter_sip.py
services/verifier/: CLAUDE.md  Dockerfile  pyproject.toml
services/verifier/app/: logging_config.py  main.py
services/verifier/scripts/: consolidate_plans.py  generate_keripy_fixtures.py  generate_witness_fixtures.py  restart-server.sh  run-tests.sh  setup-custom-domain.sh
services/verifier/tests/: __init__.py  conftest.py  test_admin.py  test_authorization.py  test_brand.py  test_canonicalization.py  test_cesr_negative.py  test_cesr_parser.py  test_cesr_pss.py  test_chain_revocation.py  test_credential_cache.py  test_credential_graph.py  test_credential_viewmodel.py  test_delegation.py  test_delegation_ui.py  test_dossier.py  test_dossier_cache.py  test_e2e_endpoints.py  test_edge_operator.py  test_full_verification.py  test_gleif.py  test_goal.py  test_header.py  test_identity.py  test_kel_cesr_integration.py  test_kel_chain.py  test_kel_integration.py  test_kel_parser.py  test_kel_resolver.py  test_keripy_integration.py  test_live_verification_e2e.py  test_local_witnesses.py  test_models.py  test_oobi.py  test_passport.py  test_revocation_checker.py  test_schema_cache.py  test_schema_resolver.py  test_schema_store.py  test_schema_validation.py  (+14 more)
services/verifier/web/: index.html  server.py
(+391 files in other folders)
