[project]
name = "vvp-issuer"
version = "0.1.0"
description = "VVP Credential Issuer Service"
requires-python = ">=3.12"
dependencies = [
  "vvp-common",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "pysodium>=0.7.18",
  "httpx>=0.27.0",
  "hio>=0.6.9",
  "lmdb>=1.4.0",
  "bcrypt>=4.0.0",
  # OAuth JWT token validation
  "PyJWT[crypto]>=2.8.0",
  # Azure SDK for Container App scaling management
  "azure-identity>=1.15.0",
  "azure-mgmt-appcontainers>=3.0.0",
  # Database (Sprint 41: User Management & Multi-tenancy)
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
