[project]
name = "vvp-sip-redirect"
version = "0.1.0"
description = "VVP SIP Redirect Signing Service"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
vvp-sip = "app.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
