[project]
name = "vvp-sip-redirect"
version = "0.1.1"
description = "VVP SIP Redirect Signing Service"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
monitor = [
    "aiohttp>=3.9.0",
    "bcrypt>=4.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
vvp-sip = "app.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
