[project]
name = "vvp-verifier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "vvp-common",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "pysodium>=0.7.18",
  "httpx>=0.27.0",
  "blake3>=0.3.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "jsonschema>=4.20.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["keripy*", "web*", "tests*", "scripts*"]
